kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: b00chat
spec:
  ports:
    - name: b00chat
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: b00chat
