kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: b00chat-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.org/client-max-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 100m
    nginx.ingress.kubernetes.io/proxy-buffering: 'on'
    nginx.ingress.kubernetes.io/proxy-buffers-number: '4'
    nginx.ingress.kubernetes.io/proxy-max-temp-file-size: 1024m
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/cors-allow-methods: GET
    nginx.ingress.kubernetes.io/websocket-services: b00chat
spec:
  rules:
    - host: b00.inpt.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: b00chat
                port:
                  number: 3000

  tls:
    - hosts:
        - b00.inpt.fr
      secretName: b00chat-tls
